[DATAPIPE-2319] Fixed minor issues
