# api_docs/swagger.json
@@ -490,14 +490,9 @@
                 "alias": {
                     "description": "The name of the alias you want to associate with the schema",
                     "type": "string"
-                },
-                "schema_id": {
-                    "description": "The original schema ID",
-                    "type": "integer"
                 }
             },
             "required": [
-                "schema_id",
                 "alias"
             ],
             "type": "object"
@@ -629,6 +624,33 @@
                 },
                 "topic": {
                     "$ref": "#/definitions/Topic"
+                },
+                "updated_at": {
+                    "description": "When this schema is last updated",
+                    "format": "date-time",
+                    "type": "string"
+                }
+            },
+            "type": "object"
+        },
+        "SchemaAlias": {
+            "properties": {
+                "alias": {
+                    "description": "The name of the alias you want to associate with the schema",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "When this schema is created",
+                    "format": "date-time",
+                    "type": "string"
+                },
+                "schema_id": {
+                    "description": "The original schema ID",
+                    "type": "integer"
+                },
+                "source_id": {
+                    "description": "The source ID",
+                    "type": "integer"
                 },
                 "updated_at": {
                     "description": "When this schema is last updated",
@@ -2225,19 +2247,21 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Success"
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/SchemaAlias"
+                        }
+                    },
+                    "400": {
+                        "description": "Alias already registered to another schema id with same namespace and source"
                     },
                     "404": {
                         "description": "Invalid request, schema id doesn't exist"
-                    },
-                    "422": {
-                        "description": "Alias already registered to another schema id with same namespace and source"
                     }
                 },
                 "summary": "Register an alias to an existing schema.",
                 "tags": [
-                    "schemas",
-                    "alias"
+                    "schema_alias"
                 ]
             }
         },
